serve up About page

--- a/public/about.html
+++ b/public/about.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>This is about.html</title>
+    <title>This is Cohub's about.html</title>
 </head>
 <body>
     <h1>About</h1>
