--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Catamaran&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
 
         <!-- Bootstrap's CSS -->
         <script src="https://kit.fontawesome.com/98e43811f5.js" crossorigin="anonymous"></script>
@@ -32,21 +33,29 @@
             <div class="float-right collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto"> 
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a></li>
+                        <a class="nav-link" href="index.html">HOME</a></li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a></li>
+                        <a class="nav-link" href="about.html">ABOUT</a></li>
                     <li class="nav-item">
-                        <a class="nav-link" href="materials.html">Materials Hub</a></li>
+                        <a class="nav-link" href="materials.html">MATERIALS HUB</a></li>
                     <li class="nav-item">
-                        <a class="nav-link" href="inspiration.html">Inspiration Board</a></li>
+                        <a class="nav-link" href="inspiration.html">INSPIRATION BOARD</a></li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a></li>
+                        <a class="nav-link" href="contact.html">CONTACT</a></li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">My Account</a></li>
+                        <a class="nav-link" href="contact.html">MY ACCOUNT</a></li>
                 </ul>
             </div>
         </div>
     </nav>
+
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4">Co-Hub</h1>
+            <img src="/images/cohubicon.PNG">
+            <p class="lead">Reuse, Recycle, Reconnect</p>
+        </div>
+    </div>
 
     <div class="container">  
         
