home page design

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1 class="display-4">Co-Hub</h1>
-            <img src="/images/cohubicon.PNG">
+            <img src="images/cohubicon.PNG" alt="Cohub Icon">
+            <h1>Co-Hub</h1>
             <p class="lead">Reuse, Recycle, Reconnect</p>
         </div>
     </div>
@@ -66,7 +66,7 @@
         <div class="container-fluid">
             <div class="row">             
                 <div class="col-3 col-sm-2 offset-1">
-                    <h5>Links</h5>
+                    <h5><b>Links</b></h5>
                     <ul class="list-unstyled"> 
                         <li><a href="about.html">About</a></li>
                         <li><a href="experience.html">Materials Hub</a></li>
@@ -80,10 +80,7 @@
                 <a href="https://www.linkedin.com/"><i class="fa fa-linkedin fa-4x fa-fw"></i></a> 
                 <a href="https://twitter.com/"><i class="fa fa-twitter fa-4x fa-fw"></i></a>
                 <a href="https://www.youtube.com/"><i class="fa fa-youtube fa-4x fa-fw"></i></a>
-            </div>
-            <div class="contact col-sm-4 text-center">
-                <br /><i class="fa fa-envelope fa-lg"></i><b> xxxxx@gmail.com </b>
-            </div>
+            </div> 
         </div>
     </footer>
 
