--- a/contact.html
+++ b/contact.html
@@ -35,13 +35,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">HOME</a></li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">ABOUT</a></li>
+                        <a class="nav-link" href="about.html">ABOUT</a></li>
                     <li class="nav-item">
                         <a class="nav-link" href="materials.html">MATERIALS HUB</a></li>
                     <li class="nav-item">
                         <a class="nav-link" href="inspiration.html">INSPIRATION BOARD</a></li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">CONTACT</a></li>
+                        <a class="nav-link" href="#">CONTACT</a></li>
                     <li class="nav-item">
                         <a class="nav-link" href="myaccount.html">MY ACCOUNT</a></li>
                 </ul>
@@ -69,9 +69,9 @@
                     <h5><b>Links</b></h5>
                     <ul class="list-unstyled"> 
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="materials.html">Materials Hub</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="materials.html">Materials Hub</a></li> 
                         <li><a href="inspiration.html">Inspiration Board</a></li> 
-                        <li><a href="contact.html">Contact</a></li> 
                         <li><a href="myaccount.html">My Account</a></li> 
                     </ul>
                 </div>
