--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="float-right collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto"> 
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">HOME</a></li>
+                        <a class="nav-link" href="#">HOME</a></li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">ABOUT</a></li>
                     <li class="nav-item">
@@ -63,19 +63,19 @@
 
     <footer class="site-footer">
         <hr></hr>
-        <div class="container-fluid">
+        <div class="container text-center">
             <div class="row">             
-                <div class="col-3 col-sm-2 offset-1">
+                <div class="col-6 col-sm-6">
                     <h5><b>Links</b></h5>
                     <ul class="list-unstyled"> 
                         <li><a href="about.html">About</a></li>
-                        <li><a href="experience.html">Materials Hub</a></li>
+                        <li><a href="materials.html">Materials Hub</a></li>
                         <li><a href="inspiration.html">Inspiration Board</a></li> 
                         <li><a href="contact.html">Contact</a></li> 
                         <li><a href="myaccount.html">My Account</a></li> 
                     </ul>
                 </div>
-            <div class="social-media col-7 col-sm-5 text-center">
+            <div class="social-media col-6 col-sm-6 text-center">
                 <h6><b>Let's Connect!</b></h6><br /> 
                 <a href="https://www.linkedin.com/"><i class="fa fa-linkedin fa-4x fa-fw"></i></a> 
                 <a href="https://twitter.com/"><i class="fa fa-twitter fa-4x fa-fw"></i></a>
