--- a/index.html
+++ b/index.html
@@ -57,8 +57,31 @@
         </div>
     </div>
 
-    <div class="container">  
-        
+    <div class="container">    
+        <div class="row">
+            <div class="col-12">
+                <h2>Welcome to Co-Hub</h2> 
+                <p>An innovative platform for waste diversion</p>  
+                <br>
+                <h2>Goal</h2> 
+                <p>To serve as a community co-ordinated asset database for solid waste management entities, 
+                    allowing its residents and organizations to co-create pathways to potential beneficial 
+                    reuse and recycling options.</p>  
+                <br>
+                <h3>"There is no such thing as "Away". When we throw anything away it must go somewhere."
+                    -Annie Leonard</h3>  
+                <br>
+                <h4>EXPLORE WHAT CO-HUB OFFERS</h4> 
+                <h4>Materials Hub</h4>
+                <p>Browse listings of materials community members are offering, or post an offer of your own.</p>
+                    <a href="materials.html" class="btn btn-secondary">Click Here</a>
+                <h4>Inspiration Board</h4>   
+                <p>Get inspired by how community members are reusing, upcycling or recycling different materials, 
+                    and leave a review to share what worked for you.</p>
+                    <a href="inspiration.html" class="btn btn-secondary">Click Here</a>
+                <br>
+            </div> 
+        </div>
     </div>
 
     <footer class="site-footer">
