--- a/about.html
+++ b/about.html
@@ -50,10 +50,19 @@
     </nav>
 
     <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <img src="images/cohubicon.PNG" alt="Cohub Icon">
-            <h1>Co-Hub</h1>
-            <p class="lead">Reuse, Recycle, Reconnect</p>
+        <div class="container"> 
+            <h3>Our Story</h3>
+            <p class="story">Communities in the U.S. are increasingly asking their solid waste management entities (SWMEs) 
+                for waste diversion options that will allow their materials to be beneficially reused or recycled. SWMEs 
+                do their best to provide these services themselves or connect residents to businesses and organizations 
+                who specialize in certain material reuse or recycling. However, this database of connections is limited, 
+                and small recycling businesses often have fluctuating capacities. It is challenging for SWMEs to constantly 
+                be aware of “who is accepting what” and the limitations surrounding it. Co-Hub offers a solution.
+               <br>
+               <br>Co-Hub is an online platform that will allow people & organizations to post their available materials and 
+                needs for others to find and use. The platform’s goal is to serve as a community coordinated asset database 
+                for SWMEs, allowing its residents and organizations to co-create pathways to potential beneficial reuse and 
+                recycling options.</p>
         </div>
     </div>
 
