--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="container">
             <img src="images/cohubicon.PNG" alt="Cohub Icon">
             <h1>Co-Hub</h1>
-            <p class="lead">Reuse, Recycle, Reconnect</p>
+            <p>Reuse, Recycle, Reconnect</p>
         </div>
     </div>
 
@@ -71,15 +71,18 @@
                 <h3>"There is no such thing as "Away". When we throw anything away it must go somewhere."
                     -Annie Leonard</h3>  
                 <br>
-                <h4>EXPLORE WHAT CO-HUB OFFERS</h4> 
-                <h4>Materials Hub</h4>
-                <p>Browse listings of materials community members are offering, or post an offer of your own.</p>
-                    <a href="materials.html" class="btn btn-secondary">Click Here</a>
-                <h4>Inspiration Board</h4>   
-                <p>Get inspired by how community members are reusing, upcycling or recycling different materials, 
-                    and leave a review to share what worked for you.</p>
-                    <a href="inspiration.html" class="btn btn-secondary">Click Here</a>
-                <br>
+                <div class="col-6 mb-5"> 
+                    <h4>EXPLORE WHAT CO-HUB OFFERS</h4> 
+                    <h4>Materials Hub</h4>
+                        <p>Browse listings of materials community members are offering, or post an offer of your own.</p>
+                        <a href="materials.html" class="btn btn-secondary">Click Here</a>
+                </div>
+                <div class="col-6 mb-5"> 
+                    <h4>Inspiration Board</h4>   
+                        <p>Get inspired by how community members are reusing, upcycling or recycling different materials, 
+                        and leave a review to share what worked for you.</p>
+                        <a href="inspiration.html" class="btn btn-secondary">Click Here</a>
+                </div>
             </div> 
         </div>
     </div>
