--- a/about.html
+++ b/about.html
@@ -66,8 +66,59 @@
         </div>
     </div>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-12">  
+                <h4>Our Mission</h4> 
+                <p>To offer a tool that serves as a values-based platform, operating on trust, accountability, community, 
+                and empowerment to get resources in the right places.</p> 
+            </div>
+        </div>
+    </div>
     <div class="container">  
+        <br>
+        <h4>Our Team</h4> 
+        <br class="header-break">
+        <div class="row mb-5">
+            <div class="col-md-4">
+                <div class="card bg-light mb-3">
+                    <div class="h-100">
+                </div> 
+                <img class="card-img-top" src="images/sujataheadshot.PNG">
+                    <div class="card-body">
+                        <h4 class="card-title"><b>Sujata Gautam</b></h4>
+                        <h2 class="card-title">Founder & CEO</h2>
+                        <p class="card-text">Bio</p> 
+                    </div>
+                </div>
+            </div>
+            
+            <div class="col-md-4">
+                <div class="card bg-light mb-3">
+                    <div class="h-100">
+                </div> 
+                <img class="card-img-top" src="images/blankheadshot.PNG">
+                    <div class="card-body">
+                        <h4 class="card-title"><b>Pranavi Ghugare</b></h4>
+                        <h2 class="card-title">Web Designer</h2>
+                        <p class="card-text">Bio</p> 
+                    </div>
+                </div>
+            </div>
         
+            <div class="col-md-4">
+                <div class="card bg-light mb-3">
+                    <div class="h-100">
+                </div> 
+                <img class="card-img-top" src="images/marisaheadshot.jpg">
+                    <div class="card-body">
+                        <h4 class="card-title"><b>Marisa Raeder</b></h4>
+                        <h2 class="card-title">Software Developer</h2>
+                        <p class="card-text">Bio</p> 
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <footer class="site-footer">
