--- a/materials.html
+++ b/materials.html
@@ -50,14 +50,33 @@
     </nav>
 
     <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <img src="images/cohubicon.PNG" alt="Cohub Icon">
-            <h1>Co-Hub</h1>
-            <p class="lead">Reuse, Recycle, Reconnect</p>
+        <div class="topnav"> 
+            <div class="search-container"> 
+                <form>
+                    <input class="search" type="text" placeholder="Search for a material..." name="search">
+                    <button class="search btn btn-secondary" type="search">Search</button>
+                </form>
+            </div>
         </div>
     </div>
 
-    <div class="container">  
+    <div class="container"> 
+        <form>
+            <h2>Post what you want to give away</h2>
+            <p>*INDICATES REQUIRED FIELD</p>
+            <div class="form-group">
+                <label for="materialForm">DESCRIPTION*</label>
+                <input type="text" class="form-control" id="materialForm" placeholder="Description">
+            </div>
+            <div class="form-group">
+                <label for="materialForm">ORGANIZATION</label>
+                <input type="text" class="form-control" id="materialForm" placeholder="Organization">
+            </div>
+            <div class="form-group">
+                <label for="materialForm">EXPIRY DATE*</label>
+                <input type="text" class="form-control" id="materialForm" placeholder="Expiry Date">
+            </div>
+        </form> 
         
     </div>
 
