--- a/inspiration.html
+++ b/inspiration.html
@@ -50,15 +50,43 @@
     </nav>
 
     <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <img src="images/cohubicon.PNG" alt="Cohub Icon">
-            <h1>Co-Hub</h1>
-            <p class="lead">Reuse, Recycle, Reconnect</p>
+        <div class="container"> 
+            <br>
+            <h3>Celebrating Our Creative Material Use</h3>
+            <br>
         </div>
     </div>
 
-    <div class="container">  
-        
+    <div class="container"> 
+        <div class="card-deck">
+            <div class="card">
+                <img class="card-img-top" src="..." alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <a href="#" class="card-link">Card link</a>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="..." alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    <a href="#" class="card-link">Card link</a>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="..." alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                    <a href="#" class="card-link">Card link</a>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+        </div>  
     </div>
 
     <footer class="site-footer">
