--- a/inspiration.html
+++ b/inspiration.html
@@ -60,30 +60,39 @@
     <div class="container"> 
         <div class="card-deck">
             <div class="card">
-                <img class="card-img-top" src="..." alt="Card image cap">
+                <img class="card-img-top" src="images/recycleplants.jpg" alt="Recycled Plant Containers">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <a href="#" class="card-link">Card link</a>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <h5 class="card-title">Title:</h5>
+                    <p class="card-text">Author:</p>
+                    <p class="card-text">Overview:</p>
+                    <a href="#" class="card-link">Read the full story here</a>
+                    <br>
+                    <p class="card-text"><small class="text-muted">Posted on X date</small></p>
+                    <p class="card-text">Reviews:</p>
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="..." alt="Card image cap">
+                <img class="card-img-top" src="images/recycleplants.jpg" alt="Recycled Plant Containers">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="card-link">Card link</a>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <h5 class="card-title">Title:</h5>
+                    <p class="card-text">Author:</p>
+                    <p class="card-text">Overview:</p>
+                    <a href="#" class="card-link">Read the full story here</a>
+                    <br>
+                    <p class="card-text"><small class="text-muted">Posted on X date</small></p>
+                    <p class="card-text">Reviews:</p>
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="..." alt="Card image cap">
+                <img class="card-img-top" src="images/recycleplants.jpg" alt="Recycled Plant Containers">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                    <a href="#" class="card-link">Card link</a>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <h5 class="card-title">Title:</h5>
+                    <p class="card-text">Author:</p>
+                    <p class="card-text">Overview:</p>
+                    <a href="#" class="card-link">Read the full story here</a>
+                    <br>
+                    <p class="card-text"><small class="text-muted">Posted on X date</small></p>
+                    <p class="card-text">Reviews:</p>
                 </div>
             </div>
         </div>  
