--- a/contact.html
+++ b/contact.html
@@ -52,13 +52,36 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <img src="images/cohubicon.PNG" alt="Cohub Icon">
-            <h1>Co-Hub</h1>
-            <p class="lead">Reuse, Recycle, Reconnect</p>
+            <h1>Co-Hub</h1> 
         </div>
     </div>
 
-    <div class="container">  
-        
+    <div class="container"> 
+        <form>
+            <div class="form-group col-md-8">
+                <h3>We value your feedback and queries</h3>
+                <br>
+                <p><i>*INDICATES REQUIRED FIELD</i></p> 
+            <div class="form-group col-md-6">
+                <label for="inputFirstName">FIRST NAME*</label>
+                <input type="email" class="form-control" id="inputFirstName" placeholder="First"> 
+            </div>
+            <div class="form-group col-md-6"> 
+                <label for="inputLastName">LAST NAME*</label> 
+                <input type="password" class="form-control" id="inputLastName" placeholder="Last">
+            </div> 
+            <div class="form-group col-md-8"></div>
+                <label for="inputMaterial">EMAIL*</label>
+                <input type="text" class="form-control" id="emailForm" placeholder="Email">
+            </div>
+            <div class="form-group col-5 form-group-lg"> 
+                <label for="materialForm">COMMENTS*</label>
+                <input type="text" class="description" id="commentsForm" placeholder="Comments or Questions">
+                <br>
+                <br>
+                <button class="submit btn btn-secondary" type="submit">Submit</button>
+            </div>
+        </form> 
     </div>
 
     <footer class="site-footer">
