--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
                 <label for="inputLastName">LAST NAME*</label> 
                 <input type="password" class="form-control" id="inputLastName" placeholder="Last">
             </div> 
-            <div class="form-group col-md-8"></div>
+            <div class="form-group col-md-8"> 
                 <label for="inputMaterial">EMAIL*</label>
                 <input type="text" class="form-control" id="emailForm" placeholder="Email">
             </div>
